Add code block formatting and example outputs to tutorials for enhanced clarity and consistency.